hphp/hack/test/typecheck/dynamic/mixed_isnt_dynamic/match_param.php
<?hh // strict

interface FunAsClass<Tin, Tout> {
  public function do(Tin $x): Tout;
}

class Good implements FunAsClass<dynamic, mixed> {
  public function do(mixed $x): mixed {
    return $x;
  }
}

class Bad implements FunAsClass<mixed, mixed> {
  public function do(dynamic $x): mixed {
    return $x;
  }
}
